<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/creme"
    tools:context=".activity.CustomerRegistrationActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollview"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:textSize="26sp"
                android:textColor="@color/black"
                android:fontFamily="@font/futura_heavy"
                android:layout_marginTop="100dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/EditCustName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:hint="@string/name"
                android:textSize="18sp"
                android:lines="1"
                android:fontFamily="@font/futura_medium"
                android:background="@drawable/background_edittext_corner_22"
                app:layout_constraintTop_toBottomOf="@id/TextRegister"/>

            <EditText
                android:id="@+id/EditContactNumber"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:hint="@string/contact_no"
                android:textSize="18sp"
                android:fontFamily="@font/futura_medium"
                android:lines="1"
                android:inputType="number"
                android:background="@drawable/background_edittext_corner_22"
                app:layout_constraintTop_toBottomOf="@id/EditCustName"/>


            <EditText
                android:id="@+id/EditEmailId"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:hint="@string/email_id"
                android:textSize="18sp"
                android:lines="1"
                android:fontFamily="@font/futura_medium"
                android:inputType="textEmailAddress"
                android:background="@drawable/background_edittext_corner_22"
                app:layout_constraintTop_toBottomOf="@id/EditContactNumber"/>

            <EditText
                android:id="@+id/EditAddress"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:hint="@string/address"
                android:textSize="18sp"
                android:lines="1"
                android:fontFamily="@font/futura_medium"
                android:background="@drawable/background_edittext_corner_22"
                app:layout_constraintTop_toBottomOf="@id/EditEmailId"/>


            <EditText
                android:id="@+id/EditCity"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:hint="@string/city"
                android:textSize="18sp"
                android:fontFamily="@font/futura_medium"
                android:lines="1"
                android:background="@drawable/background_edittext_corner_22"
                app:layout_constraintTop_toBottomOf="@id/EditAddress"/>

            <EditText
                android:id="@+id/EditPinCode"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:hint="@string/pin_code"
                android:textSize="18sp"
                android:lines="1"
                android:fontFamily="@font/futura_medium"
                android:inputType="number"
                android:background="@drawable/background_edittext_corner_22"
                app:layout_constraintTop_toBottomOf="@id/EditCity"/>

            <EditText
                android:id="@+id/EditImageName"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="18sp"
                android:lines="1"
                android:inputType="number"
                android:fontFamily="@font/futura_medium"
                android:hint="@string/address_proof_document"
                android:background="@drawable/background_edittext_corner_22"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/EditPinCode"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ButtonUpload"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:layout_marginStart="5dp"
                android:text="@string/upload"
                android:fontFamily="@font/futura_medium"
                android:background="@drawable/background_corner_orange_12"
                app:layout_constraintTop_toTopOf="@id/EditImageName"
                app:layout_constraintStart_toEndOf="@id/EditImageName"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ButtonRegister"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="17sp"
                android:text="@string/register"
                android:fontFamily="@font/futura_medium"
                android:background="@drawable/background_corner_orange_12"
                app:layout_constraintTop_toBottomOf="@id/EditImageName"
                />

            <TextView
                android:id="@+id/TextGoLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:fontFamily="@font/futura_medium"
                android:text="@string/already_a_customer_login_here"
                app:layout_constraintTop_toBottomOf="@id/ButtonRegister"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp"
                app:layout_constraintTop_toBottomOf="@id/TextGoLogin"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>