<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/TextCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:fontFamily="@font/futura_heavy"
        android:layout_marginTop="60dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/TextCart"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/TextTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:fontFamily="@font/futura_heavy"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/checkout_button"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/TextEmptyCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_cart"
        android:textSize="26sp"
        android:visibility="gone"
        android:textColor="@color/black"
        android:fontFamily="@font/futura_heavy"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/checkout_button"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_corner_orange_12"
        android:text="@string/checkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="297dp"
        tools:layout_editor_absoluteY="861dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
