<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/creme"
    tools:context=".activity.OtpVerificationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otp_verification"
        android:textSize="21sp"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/futura_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/etOtp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/enter_otp"
        android:layout_marginHorizontal="16dp"
        android:paddingHorizontal="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/background_edittext_corner_black_22"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="number" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnVerifyOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/background_corner_orange_12"
        app:layout_constraintTop_toBottomOf="@id/etOtp"
        android:text="@string/verify_otp" />

</androidx.constraintlayout.widget.ConstraintLayout>