<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/creme"
    tools:context=".fragment.AddProductFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollview"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextAddProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_product"
                android:textSize="26sp"
                android:textColor="@color/black"
                android:fontFamily="@font/futura_heavy"
                android:layout_marginTop="60dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/EditProductName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:hint="@string/product_name"
                android:textSize="18sp"
                android:fontFamily="@font/futura_medium"
                android:lines="1"
                android:background="@drawable/background_edittext_corner_22"
                app:layout_constraintTop_toBottomOf="@id/TextAddProduct"/>

            <EditText
                android:id="@+id/EditDescription"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="4dp"
                android:hint="@string/description"
                android:textSize="18sp"
                android:fontFamily="@font/futura_medium"
                android:gravity="start|top"
                android:background="@drawable/background_edittext_corner_22"
                app:layout_constraintTop_toBottomOf="@id/EditProductName"/>

            <EditText
                android:id="@+id/EditRate"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:hint="@string/rate"
                android:textSize="18sp"
                android:fontFamily="@font/futura_medium"
                android:background="@drawable/background_edittext_corner_22"
                app:layout_constraintTop_toBottomOf="@id/EditDescription"/>

            <ImageView
                android:id="@+id/ImageProduct"
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/upload_image_bg"
                app:layout_constraintStart_toStartOf="@id/EditRate"
                app:layout_constraintTop_toBottomOf="@id/EditRate"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ButtonAddImage"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:text="@string/add_image"
                android:textSize="18sp"
                android:fontFamily="@font/futura_medium"
                android:background="@drawable/background_corner_orange_12"
                app:layout_constraintEnd_toEndOf="@id/EditRate"
                app:layout_constraintTop_toTopOf="@id/ImageProduct"
                app:layout_constraintBottom_toBottomOf="@id/ImageProduct"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ButtonAdd"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/add_product"
                android:textSize="18sp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/futura_medium"
                android:background="@drawable/background_corner_orange_12"
                android:layout_marginHorizontal="50dp"
                app:layout_constraintTop_toBottomOf="@id/ImageProduct"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>