<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/creme"
    tools:context=".activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollview"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="26sp"
                android:textColor="@color/black"
                android:fontFamily="@font/futura_heavy"
                android:layout_marginTop="100dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/EditContactNumber"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:hint="@string/contact_no"
                android:textSize="18sp"
                android:fontFamily="@font/futura_medium"
                android:lines="1"
                android:background="@drawable/background_edittext_corner_22"
                app:layout_constraintTop_toBottomOf="@id/TextLogin"/>

            <EditText
                android:id="@+id/EditPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:hint="@string/password"
                android:textSize="18sp"
                android:lines="1"
                android:fontFamily="@font/futura_medium"
                android:background="@drawable/background_edittext_corner_22"
                app:layout_constraintTop_toBottomOf="@id/EditContactNumber"/>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ButtonLogin"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="17sp"
                android:text="@string/login"
                android:fontFamily="@font/futura_medium"
                android:background="@drawable/background_corner_orange_12"
                app:layout_constraintTop_toBottomOf="@id/EditPassword"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>